Modified Flow Executions Dashboard to filter errors correctly using new RequestStatus label added in Promtail config instead of the regex search for the text "error" to avoid returning results that were not errors but contained the word error in the log file. Amended the Loki config file to increase the max GRPC msg sizes that can be sent and received to reduce the liklihood of errors when querying from Grafana.

--- a/Grafana/Loki/Config/loki-local-config.yaml
+++ b/Grafana/Loki/Config/loki-local-config.yaml
@@ -4,7 +4,9 @@ server:
   http_listen_port: 3100
   http_server_read_timeout: 10m # To avoid Grafana timeouts when frontend parallelism is lowered.
   http_server_write_timeout: 10m # To avoid Grafana timeouts when frontend parallelism is lowered.
-
+  grpc_server_max_recv_msg_size: 16777216 # To avoid grpc ResourceExhausted error
+  grpc_server_max_send_msg_size: 16777216 # To avoid grpc ResourceExhausted error
+  
 common:
   path_prefix: /tmp/loki
   storage:
