Modified promtail config following testing

--- a/Grafana/Promtail/Config/promtail-local-config.yaml
+++ b/Grafana/Promtail/Config/promtail-local-config.yaml
@@ -24,13 +24,13 @@ scrape_configs:
             Type: Event.LogType || 'Cortex'
             Api: Event.Type
             Result: Event.Tags.Cortex.Result || 'Success'
-            StatusCode: Event.Tags.Cortex.Http.Response.StatusCode || Event.Details.Response.StatusCode || 'Unknown'
-            Tenant: Event.Tags.Cortex.Tenant.Name || Event.Details.Request.Inputs.tenant
-            System: Event.Tags.Cortex.System.Name || Event.Details.Request.Inputs.system
-            Node: Event.Platform.Node.Name || Event.Service.NodeName
-            PackageName: Event.Tags.Cortex.Package.Name || Event.Details.Request.Inputs.packageName
-            FlowName: Event.Tags.Cortex.Flow.Name || Event.Details.Request.Inputs.flowName
-            InitiatorIpAddress: Event.Details.Request.Initiator.IpAddress
+            StatusCode: Event.Tags.Cortex."Http.Response.StatusCode" || Event.Details.Response.StatusCode || 'Unknown'
+            Tenant: Event.Tags.Cortex."Tenant.Name" || Event.Details.Request.Inputs.tenant || 'Unknown'
+            System: Event.Tags.Cortex."System.Name" || Event.Details.Request.Inputs.system || 'Unknown'
+            Node: Event.Platform.Node.Name || Event.Service.NodeName || 'Unknown'
+            PackageName: Event.Tags.Cortex."Package.Name" || Event.Details.Request.Inputs.packageName || 'Unknown'
+            FlowName: Event.Tags.Cortex."Flow.Name" || Event.Details.Request.Inputs.flowName || 'Unknown'
+            InitiatorIpAddress: Event.Details.Request.Initiator.IpAddress || 'Unknown'
             RequestStatus: '"@l"'
             Async: Event.Details.Request.Inputs.async || 'false'
       - labels:
