--- a/Grafana/Loki/Config/loki-local-config.yaml
+++ b/Grafana/Loki/Config/loki-local-config.yaml
@@ -6,8 +6,9 @@ server:
   http_server_write_timeout: 10m # To avoid Grafana timeouts when frontend parallelism is lowered.
   grpc_server_max_recv_msg_size: 16777216 # To avoid grpc ResourceExhausted error
   grpc_server_max_send_msg_size: 16777216 # To avoid grpc ResourceExhausted error
-  
+
 common:
+  instance_addr: 127.0.0.1
   path_prefix: /tmp/loki
   storage:
     filesystem:
@@ -15,37 +16,50 @@ common:
       rules_directory: /tmp/loki/rules
   replication_factor: 1
   ring:
-    instance_addr: 127.0.0.1
     kvstore:
       store: inmemory
+
+query_range:
+  results_cache:
+    cache:
+      embedded_cache:
+        enabled: true
+        max_size_mb: 100
+  parallelise_shardable_queries: false
 
 schema_config:
   configs:
     - from: 2020-10-24
-      store: boltdb-shipper
+      store: tsdb
       object_store: filesystem
-      schema: v11
+      schema: v13
       index:
         prefix: index_
         period: 24h
 
 ruler:
   alertmanager_url: http://localhost:9093
-  
-frontend_worker:
-  parallelism: 4 # Can be lowered to limit memory usage.
-  
+
 query_scheduler:
   max_outstanding_requests_per_tenant: 2048
-
-query_range:
-  parallelise_shardable_queries: false
- 
+  
 limits_config:
   max_query_length: 0h # Controls max time range for queries. Default is 721h.
   split_queries_by_interval: 24h
+  query_timeout: 10m # To avoid Grafana timeouts when frontend parallelism is lowered.
   
 querier:
-  query_timeout: 10m # To avoid Grafana timeouts when frontend parallelism is lowered.
-  engine:
-    timeout: 10m # To avoid Grafana timeouts when frontend parallelism is lowered.
+  max_concurrent: 4
+  
+# By default, Loki will send anonymous, but uniquely-identifiable usage and configuration
+# analytics to Grafana Labs. These statistics are sent to https://stats.grafana.org/
+#
+# Statistics help us better understand how Loki is used, and they show us performance
+# levels for most users. This helps us prioritize features and documentation.
+# For more information on what's sent, look at
+# https://github.com/grafana/loki/blob/main/pkg/analytics/stats.go
+# Refer to the buildReport method to see what goes into a report.
+#
+# If you would like to disable reporting, uncomment the following lines:
+analytics:
+  reporting_enabled: false
